k8s/friend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friend-service
  template:
    metadata:
      labels:
        app: friend-service
    spec:
      containers:
        - name: friend-service
          image: friend-service:latest
          imagePullPolicy: Never
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8083
          readinessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 40
