k8s/friend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friend-service
spec:
  selector:
    app: friend-service
  ports:
    - port: 8083
      targetPort: 8083
