k8s/mongo-service.yaml
# gives Mongo a stable internal DNS name other Pods can reach it by
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
