k8s/mongo-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-allow-app-only
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth-service
        - podSelector:
            matchLabels:
              app: task-service
        - podSelector:
            matchLabels:
              app: friend-service
        - podSelector:
            matchLabels:
              app: notification-service
        - podSelector:
            matchLabels:
              app: ai-service
      ports:
        - protocol: TCP
          port: 27017
